--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -19,8 +19,8 @@
     width: 1000px;
     display: flex;
     align-items: center;
-    margin-right: 20px;
-    margin-left: 20px;
+    margin-right: 40px;
+    margin-left: 40px;
 }
 
 #toggleMode {
